[package]
name        = "cuprate-benchmark-example"
version     = "0.0.0"
edition     = "2021"
description = "Example showcasing Cuprate's benchmarking harness"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/benches/benchmark/example"
keywords    = ["cuprate", "benchmarking", "example"]

[dependencies]
cuprate-benchmark-lib = { workspace = true }

[dev-dependencies]

[lints]
workspace = true